--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 
 <body>
   <h3>My Contact Information</h3>
-  <p>Chikmagalur</p>
+  <p>Address</p>
   <p>123456</p>
   <p>myemail@kmail.com</p>
   <hr>
