--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td><img src="https://media-exp1.licdn.com/dms/image/C5103AQHeMSJIjh9R7w/profile-displayphoto-shrink_100_100/0?e=1597276800&v=beta&t=SojG0f9ZGjCo78Gc1hfMnIk-6J0fNh2KXoy6ti_J6DE" alt="Renita's profile picture">
       </td>
       <td>
-        <h1>Renita Sequeira</h1>
+        <h1>Renita</h1>
         <p><em>Senior Systen Engineer at <a href="https://www.infosys.com/">Infosys</a>.</em></p>
         <p>
           I am a developer in the <a href="https://en.wikipedia.org/wiki/Pick_operating_system">pick basic</a> language. Seeking to learn HTML and designing websites.
@@ -26,12 +26,11 @@
   <ul>
     <li>Schooling at
       <ul>
-        <li>St. Joseph's English higher primary school, Chikmagalur</li>
-        <li>St. Joseph's convent school, Chikmagalur</li>
+        <li>St. Joseph's School</li>
       </ul>
     </li>
-    <li>Pre-university at St. Aloysius PU college, Mangalore</li>
-    <li>Graduation at Adichunchanagiri Institute of Tehnology, Chikmagalur</li>
+    <li>Pre-university at St.Aloy</li>
+    <li>Graduation at AIT</li>
   </ul>
   <hr>
   <h3>Work Experience</h3>
