--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/IMG_9D8D0D425E32-1.jpeg" alt="Renita's Profile picture"></td>
+      <td><img src="images/IMG_9D8D0D425E32-1.jpeg" alt="Renita's Profile picture" style="width: 10rem; height: 8rem;"></td>
       <td>
         <h1>Renita</h1>
         <p><em>Senior Systen Engineer at <a href="https://www.infosys.com/">Infosys</a>.</em></p>
