--- a/index.html
+++ b/index.html
@@ -1,78 +1,92 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Renita's Personal site</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Renita's Personal site</title>
-</head>
-
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="images/IMG_9D8D0D425E32-1.jpeg" alt="Renita's Profile picture" style="width: 10rem; height: 8rem;"></td>
-      <td>
-        <h1>Renita</h1>
-        <p><em>Senior Systen Engineer at <a href="https://www.infosys.com/">Infosys</a>.</em></p>
-        <p>
-          I am a developer in the <a href="https://en.wikipedia.org/wiki/Pick_operating_system">pick basic</a> language. Seeking to learn HTML and designing websites.
-          I love dogs and also travelling.
-        </p>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>Schooling at
-      <ul>
-        <li>St. Joseph's School</li>
-      </ul>
-    </li>
-    <li>Pre-university at St.Aloy</li>
-    <li>Graduation at AIT</li>
-  </ul>
-  <hr>
-  <h3>Work Experience</h3>
-  <table cellspacing="10">
-    <thead>
-      <th>Timeline</th>
-      <th>Desciption</th>
-    </thead>
-    <tbody>
+  <body>
+    <table cellspacing="20">
       <tr>
-        <td>2013</td>
-        <td>Technical support representative at IBM</td>
+        <td>
+          <img
+            src="images/IMG_9D8D0D425E32-1.jpeg"
+            alt="Renita's Profile picture"
+            style="width: 10rem; height: 8rem"
+          />
+        </td>
+        <td>
+          <h1>Renita</h1>
+          <p>
+            <em
+              >Senior Systen Engineer at
+              <a href="https://www.infosys.com/">Infosys</a>.</em
+            >
+          </p>
+          <p>
+            I am a developer in the
+            <a href="https://en.wikipedia.org/wiki/Pick_operating_system"
+              >pick basic</a
+            >
+            language. Seeking to learn HTML and designing websites. I love dogs
+            and also travelling.
+          </p>
+        </td>
+      </tr>
+    </table>
+    <hr />
+    <h3>Education</h3>
+    <ul>
+      <li>
+        Schooling at
+        <ul>
+          <li>St. Joseph's School</li>
+        </ul>
+      </li>
+      <li>Pre-university at St.Aloy</li>
+      <li>Graduation at AIT</li>
+    </ul>
+    <hr />
+    <h3>Work Experience</h3>
+    <table cellspacing="10">
+      <thead>
+        <th>Timeline</th>
+        <th>Desciption</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2013</td>
+          <td>Technical support representative at IBM</td>
+        </tr>
+        <tr>
+          <td>2014-2015</td>
+          <td>Systems enginner at Infosys</td>
+        </tr>
+      </tbody>
+    </table>
+    <hr />
+    <h3>Skills</h3>
+    <table cellspacing="10">
+      <tr>
+        <td>Mainframes</td>
+        <td>⭐⭐</td>
       </tr>
       <tr>
-        <td>2014-2015</td>
-        <td>Systems enginner at Infosys</td>
+        <td>Pick OS</td>
+        <td>⭐⭐⭐</td>
       </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>Mainframes </td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Pick OS </td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Photography</td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Cooking</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-  </table>
-  <hr>
-  <a href="My Hobbies.html">My hobbies</a>
-  <br>
-  <a href="contact.html">Contact Me.</a>
-</body>
-
+      <tr>
+        <td>Photography</td>
+        <td>⭐⭐</td>
+      </tr>
+      <tr>
+        <td>Cooking</td>
+        <td>⭐⭐⭐</td>
+      </tr>
+    </table>
+    <hr />
+    <a href="My Hobbies.html">My hobbies</a>
+    <br />
+    <a href="contact.html">Contact Me.</a>
+  </body>
 </html>
