--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
           <p>
             <em
               >Senior Systen Engineer at
-              <a href="https://www.infosys.com/">Infosys</a>.</em
-            >
+              <a href="https://www.infosys.com/">Infosys</a>
+            </em>
           </p>
           <p>
             I am a developer in the
-            <a href="https://en.wikipedia.org/wiki/Pick_operating_system"
-              >pick basic</a
-            >
+            <a href="https://en.wikipedia.org/wiki/Pick_operating_system">pick basic</a>
             language. Seeking to learn HTML and designing websites. I love dogs
             and also travelling.
           </p>
@@ -60,7 +58,11 @@
         </tr>
         <tr>
           <td>2014-2015</td>
-          <td>Systems enginner at Infosys</td>
+          <td>Systems Engineer at Infosys</td>
+        </tr>
+        <tr>
+            <td>2018-Present</td>
+            <td>Senior Systems Engineer at Infosys</td>
         </tr>
       </tbody>
     </table>
